Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobOrder__c/StagingJobOrder__c.object-meta.xml
<CustomObject>
    <label>Staging Job Order</label>
    <nameField>
        <label>Staging Job Order</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Staging Job Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>