Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobOrder__c/fields/Account_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Account_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Lookup</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Staging Job Orders</relationshipLabel>
    <relationshipName>Staging_Job_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>