Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobOrder__c/fields/Job_Order_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Job_Order_Quantity__c</fullName>
    <formula>Job_Order_Lookup__r.Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Order Quantity</label>
    <type>Text</type>
</CustomField>