Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobOrder__c/fields/Job_Role_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Job_Role_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Role Lookup</label>
    <referenceTo>sirenum__Team__c</referenceTo>
    <relationshipLabel>Staging Job Orders</relationshipLabel>
    <relationshipName>Staging_Job_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>