Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobOrder__c/fields/Role_ID__c.field-meta.xml
<CustomField>
    <fullName>Role_ID__c</fullName>
    <formula>RIGHT(StgJobRoleId__c,5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Role ID</label>
    <type>Text</type>
</CustomField>