Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobOrder__c/fields/Site_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Site_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Lookup</label>
    <referenceTo>sirenum__Site__c</referenceTo>
    <relationshipLabel>Staging Job Orders</relationshipLabel>
    <relationshipName>Staging_Job_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>