Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobOrder__c/fields/Staging_Job_Application__c.field-meta.xml
<CustomField>
    <fullName>Staging_Job_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staging Job Application</label>
    <referenceTo>StagingJobApplication__c</referenceTo>
    <relationshipLabel>Staging Job Orders</relationshipLabel>
    <relationshipName>Staging_Job_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>