Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobOrder__c/fields/StgCandidateRoleId__c.field-meta.xml
<CustomField>
    <fullName>StgCandidateRoleId__c</fullName>
    <label>StgCandidateRoleId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>