Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobOrder__c/fields/StgClient_Id__c.field-meta.xml
<CustomField>
    <fullName>StgClient_Id__c</fullName>
    <label>StgClient Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>