Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobOrder__c/fields/StgCostCentre__c.field-meta.xml
<CustomField>
    <fullName>StgCostCentre__c</fullName>
    <label>StgCostCentre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>