Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobOrder__c/fields/StgCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>StgCreatedDate__c</fullName>
    <label>StgCreatedDate</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>