Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobOrder__c/fields/StgCVRequired__c.field-meta.xml
<CustomField>
    <fullName>StgCVRequired__c</fullName>
    <label>StgCVRequired</label>
    <length>255</length>
    <type>Text</type>
</CustomField>