Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobOrder__c/fields/StgEndDate__c.field-meta.xml
<CustomField>
    <fullName>StgEndDate__c</fullName>
    <label>StgEndDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>