Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobOrder__c/fields/StgEndTime__c.field-meta.xml
<CustomField>
    <fullName>StgEndTime__c</fullName>
    <label>StgEndTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>