Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobOrder__c/fields/StgFrontOfficeIntegrationSystem__c.field-meta.xml
<CustomField>
    <fullName>StgFrontOfficeIntegrationSystem__c</fullName>
    <label>StgFrontOfficeIntegrationSystem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>