Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobOrder__c/fields/StgHasShifts__c.field-meta.xml
<CustomField>
    <fullName>StgHasShifts__c</fullName>
    <label>StgHasShifts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>