Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobOrder__c/fields/StgJobCat__c.field-meta.xml
<CustomField>
    <fullName>StgJobCat__c</fullName>
    <label>StgJobCat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>