Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobOrder__c/fields/StgJobRoleId__c.field-meta.xml
<CustomField>
    <fullName>StgJobRoleId__c</fullName>
    <description>This field is related to Booking in Evo</description>
    <label>StgJobRoleId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>