Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobOrder__c/fields/StgJobTitle__c.field-meta.xml
<CustomField>
    <fullName>StgJobTitle__c</fullName>
    <label>StgJobTitle</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>