Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobOrder__c/fields/StgLocationId__c.field-meta.xml
<CustomField>
    <fullName>StgLocationId__c</fullName>
    <label>StgLocationId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>