Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobOrder__c/fields/StgLocationName__c.field-meta.xml
<CustomField>
    <fullName>StgLocationName__c</fullName>
    <label>StgLocationName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>