Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobOrder__c/fields/StgMoveOrCopy__c.field-meta.xml
<CustomField>
    <fullName>StgMoveOrCopy__c</fullName>
    <label>Stg Move Or Copy</label>
    <length>100</length>
    <type>Text</type>
</CustomField>