Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobOrder__c/fields/StgPostCode__c.field-meta.xml
<CustomField>
    <fullName>StgPostCode__c</fullName>
    <label>StgPostCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>