Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobOrder__c/fields/StgQuantity__c.field-meta.xml
<CustomField>
    <fullName>StgQuantity__c</fullName>
    <label>StgQuantity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>