Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobOrder__c/fields/StgReqPayload__c.field-meta.xml
<CustomField>
    <fullName>StgReqPayload__c</fullName>
    <description>Original JSON Payload received</description>
    <label>Request JSON Payload</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>