Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobOrder__c/fields/StgRequiredStaff__c.field-meta.xml
<CustomField>
    <fullName>StgRequiredStaff__c</fullName>
    <label>StgRequiredStaff</label>
    <length>255</length>
    <type>Text</type>
</CustomField>