Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobOrder__c/fields/StgRoleRequirement__c.field-meta.xml
<CustomField>
    <fullName>StgRoleRequirement__c</fullName>
    <label>StgRoleRequirement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>