Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobOrder__c/fields/StgSecWatchdog__c.field-meta.xml
<CustomField>
    <fullName>StgSecWatchdog__c</fullName>
    <label>StgSecWatchdog</label>
    <length>255</length>
    <type>Text</type>
</CustomField>