Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobOrder__c/fields/StgSourceSystem__c.field-meta.xml
<CustomField>
    <fullName>StgSourceSystem__c</fullName>
    <label>StgSourceSystem</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>