Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobOrder__c/fields/StgStartDate__c.field-meta.xml
<CustomField>
    <fullName>StgStartDate__c</fullName>
    <label>StgStartDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>