Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobOrder__c/fields/StgStartTime__c.field-meta.xml
<CustomField>
    <fullName>StgStartTime__c</fullName>
    <label>StgStartTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>