Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobOrder__c/fields/StgTransactionType__c.field-meta.xml
<CustomField>
    <fullName>StgTransactionType__c</fullName>
    <label>Stg Transaction Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>