Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobOrder__c/listViews/Searching.listView-meta.xml
<ListView>
    <fullName>Searching</fullName>
    <columns>NAME</columns>
    <columns>StgClient_Id__c</columns>
    <columns>StgClientName__c</columns>
    <columns>StgLocationName__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>StgJobTitle__c</columns>
    <columns>Staging_Job_Application__c</columns>
    <columns>StgStartDate__c</columns>
    <columns>StgEndDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Staging_Job_Application__c</field>
        <operation>contains</operation>
        <value>VMS-A-202301-6768</value>
    </filters>
    <label>Searching</label>
    <language>en_US</language>
</ListView>